# insider-scan

./: .gitignore  README.md  app.py  config.yaml  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: congress_members.json  tickers_watchlist.txt
scripts/: api_key.py  update_congress.py
src/insider_scan/: cli.py  config.py  merge.py  models.py  settings.py
src/insider_scan/sources/: __init__.py  openinsider.py  sec_edgar.py  secform4.py
src/insider_scanner/: __init__.py  cli.py  main.py
src/insider_scanner/core/: __init__.py  bgeometrics_client.py  coinmetrics_cached_client.py  coinmetrics_client.py  coinmetrics_indicators_service.py  congress_house.py  congress_senate.py  dashboard.py  edgar.py  merger.py  models.py  openinsider.py  secform4.py  senate.py
src/insider_scanner/gui/: __init__.py  congress_tab.py  dashboard_tab.py  main_window.py  scan_tab.py  widgets.py
src/insider_scanner/utils/: __init__.py  caching.py  config.py  http.py  logging.py  threading.py
tests/: fixtures.py  test_bgeometrics.py  test_caching.py  test_coinmetrics.py  test_config.py  test_congress_house.py  test_congress_senate.py  test_congress_tab.py  test_dashboard.py  test_dashboard_widgets.py  test_edgar.py  test_gui.py  test_integration.py  test_live.py  test_merger.py  test_models.py  test_openinsider.py  test_secform4.py  test_senate.py  test_update_congress.py
