[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insider-scanner"
version = "0.1.0"
description = "Scan insider trades from secform4.com, openinsider.com, and SEC EDGAR."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Insider-Scanner Contributors"}]

dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "pandas>=2.1",
    "PySide6>=6.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-qt>=4.2",
    "responses>=0.24",
]

[project.scripts]
insider-scanner = "insider_scanner.main:main"
insider-scanner-cli = "insider_scanner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "live: marks tests that require internet (deselect with '-m \"not live\"')",
]
